# TileEngineGL

./: .gitignore  CMakeLists.txt
res/shaders/: default.frag  default.vert
src/: Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  main.cpp  main.h
src/Mesh/: Mesh.cpp  Mesh.h  Quad.cpp  Quad.h
src/Renderer/: CommandBuffer.cpp  CommandBuffer.h  RenderCommand.h  Renderer.h
